--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -78,7 +78,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=StatPyConverter
-main.class=statpyconverter.StatPyConverter
+main.class=statpyconverter.Run
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
