--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,15 +34,21 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/StatPyConverter
 excludes=
 file.reference.java-cup-11b-runtime.jar=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\jflex y cup\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b-runtime.jar-1=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\proyecto1\\jflex y cup\\java-cup-11b-runtime.jar
 file.reference.java-cup-11b.jar=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\jflex y cup\\java-cup-11b.jar
+file.reference.java-cup-11b.jar-1=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\proyecto1\\jflex y cup\\java-cup-11b.jar
 file.reference.jflex-full-1.7.0.jar=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\jflex y cup\\jflex-full-1.7.0.jar
+file.reference.jflex-full-1.7.0.jar-1=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\proyecto1\\jflex y cup\\jflex-full-1.7.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.java-cup-11b.jar}:\
     ${file.reference.java-cup-11b-runtime.jar}:\
-    ${file.reference.jflex-full-1.7.0.jar}
+    ${file.reference.jflex-full-1.7.0.jar}:\
+    ${file.reference.java-cup-11b-runtime.jar-1}:\
+    ${file.reference.java-cup-11b.jar-1}:\
+    ${file.reference.jflex-full-1.7.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
