--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,10 @@ file.reference.java-cup-11b-runtime.jar=C:\\Users\\1998j\\OneDrive\\Desktop\\com
 file.reference.java-cup-11b-runtime.jar-1=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\proyecto1\\jflex y cup\\java-cup-11b-runtime.jar
 file.reference.java-cup-11b.jar=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\jflex y cup\\java-cup-11b.jar
 file.reference.java-cup-11b.jar-1=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\proyecto1\\jflex y cup\\java-cup-11b.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\proyecto1\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jflex-full-1.7.0.jar=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\jflex y cup\\jflex-full-1.7.0.jar
 file.reference.jflex-full-1.7.0.jar-1=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\proyecto1\\jflex y cup\\jflex-full-1.7.0.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\1998j\\OneDrive\\Desktop\\compi1\\proyecto1\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.jflex-full-1.7.0.jar}:\
     ${file.reference.java-cup-11b-runtime.jar-1}:\
     ${file.reference.java-cup-11b.jar-1}:\
-    ${file.reference.jflex-full-1.7.0.jar-1}
+    ${file.reference.jflex-full-1.7.0.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
